--- a/WorldlineConnectExample/Resources/en.lproj/Localizable.strings
+++ b/WorldlineConnectExample/Resources/en.lproj/Localizable.strings
@@ -72,6 +72,9 @@
 "RecurringPayment" = "Payment is recurring";
 "RecurringPaymentHint" = "Indicates whether the payment product that is used for this payment should support recurring payments. If set to true, products not supporting recurring will be filtered.";
 
+"IsInstallments" = "Payment is in installments";
+"IsInstallmentsHint" = "Use this property to indicate whether the payment will be paid in instalments. This will be taken into account when determining the availability of credit cards when making an IIN details call.";
+
 "GroupPaymentProducts" = "Group payment products";
 "GroupPaymentProductsHint" = "Enabling this setting will bundle all Credit Card payment products to a single list item (Payment Product Group). The IIN Details service call can be used to determine what card product is actually used by the consumer.";
 
